# synrepo

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  ROADMAP.md  synrepo-agents.md  test_output.txt
.agents/skills/synrepo/: SKILL.md
.codex/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/tasks/: impact_or_risk.json  route_to_edit.json  symbol_explanation.json  test_surface.json
crates/synrepo-mcp/: Cargo.toml
crates/synrepo-mcp/src/: findings.rs  main.rs
docs/: ADDING-LANGUAGE.md  ARCHITECTURE.md  CONFIG.md  EMBEDDINGS.md  EXPLAIN.md  FOUNDATION-SPEC.md  FOUNDATION.md  KEYCHAIN-DESIGN.md  MCP.md  RUNTIME_BUDGET.md  SCHEMA.md  SYNTHESIS.md
openspec/: config.yaml
openspec/changes/add-gated-anchor-edits-mcp-v1/: proposal.md  tasks.md
openspec/changes/agent-doctrine-v1/: design.md  tasks.md
openspec/changes/agent-fast-path-routing-v1/: design.md  proposal.md  tasks.md
openspec/changes/agent-setup-mcp-tier-expansion-v1/: design.md  tasks.md
openspec/changes/agent-workflow-hardening-v1/: design.md  proposal.md  tasks.md
openspec/changes/bootstrap-ux-v1/: proposal.md  tasks.md
openspec/changes/card-quality-v1/: design.md  proposal.md  tasks.md
openspec/changes/client-autowire-polish-v2/: design.md  tasks.md
openspec/changes/context-accounting-and-workflow-v1/: proposal.md
openspec/changes/context-artifacts-framing-v1/: proposal.md  tasks.md
openspec/changes/context-benchmark-evidence-pack-v1/: tasks.md
openspec/changes/context-task-packets-v1/: design.md  proposal.md  tasks.md
openspec/changes/context-workflow-follow-ups-v1/: proposal.md  tasks.md
openspec/changes/cross-language-symbol-visibility-v1/: proposal.md  tasks.md
openspec/changes/cross-link-overlay-v1/: design.md  proposal.md  tasks.md
openspec/changes/degradation-readiness-matrix-v1/: design.md  proposal.md  tasks.md
openspec/changes/discover-worktrees-submodules-v1/: design.md  proposal.md  tasks.md
openspec/changes/embedding-clone-safety-v1/: design.md  tasks.md
openspec/changes/foundation-bootstrap/: proposal.md
openspec/changes/git-cache-breakage-invalidation-v1/: tasks.md
openspec/changes/git-intelligence-v1/: design.md  proposal.md  tasks.md
openspec/changes/global-tui-project-dashboard/: design.md  tasks.md
openspec/changes/graph-cochange-edges-v1/: design.md  proposal.md  tasks.md
openspec/changes/graph-lifecycle-v1/: design.md  proposal.md  tasks.md
openspec/changes/lexical-substrate-v1/: design.md  proposal.md  tasks.md
openspec/changes/mcp-primitives-v1/: tasks.md
openspec/changes/operator-surface-v1/: proposal.md  tasks.md
openspec/changes/overlay-agent-notes-v1/: tasks.md
openspec/changes/pipeline-stage8-arcswap-v1/: design.md  notes.md  proposal.md  tasks.md
openspec/changes/repair-fuzzy-match-algorithm-v1/: design.md  proposal.md  tasks.md
openspec/changes/repair-loop-v1/: tasks.md
openspec/changes/repo-resume-context-v1/: design.md  proposal.md  tasks.md
openspec/changes/runtime-dashboard-v1/: design.md  proposal.md  tasks.md
openspec/changes/semantic-routing-search-v1/: tasks.md
openspec/changes/semantic-triage-v1/: design.md  proposal.md  tasks.md
openspec/changes/server-side-context-budget-v1/: design.md  proposal.md  tasks.md
openspec/changes/setup-wizard/: design.md  proposal.md  tasks.md
openspec/changes/specialist-cards-v1/: proposal.md  tasks.md
openspec/changes/stage4-call-scope-narrowing-v1/: design.md  tasks.md
openspec/changes/storage-compaction-v1/: design.md  proposal.md  tasks.md
openspec/changes/storage-compatibility-v1/: design.md  proposal.md  tasks.md
openspec/changes/structural-pipeline-v1/: design.md  proposal.md
openspec/changes/structural-resilience-v1/: tasks.md
openspec/changes/structural-resilience-v2/: design.md  proposal.md  tasks.md
openspec/changes/symbol-body-hash-column-v1/: tasks.md
openspec/changes/symbol-last-change-v1/: design.md  proposal.md  tasks.md
openspec/changes/symbol-to-symbol-calls-v1/: design.md  tasks.md
openspec/changes/sync-watch-delegation-v1/: tasks.md
openspec/changes/synthesis-provider-abstraction-v1/: tasks.md
openspec/changes/trust-dashboard-v2/: tasks.md
openspec/changes/watch-reconcile-v1/: tasks.md
openspec/changes/workflow-handoffs-v1/: proposal.md
scripts/: install.ps1  install.sh
skill/: SKILL.md
skill/references/: budgets-and-errors.md  editing-and-mutation.md  mcp-tools.md  search-routing.md  setup-and-fallback.md
src/: agent_install.rs  config.rs  docs_drift.rs  error.rs  lib.rs  test_support.rs
src/bootstrap/: init.rs  mod.rs  mode_inspect.rs  report.rs  runtime_probe.rs
src/config/: defaults.rs  explain.rs  io.rs  mod.rs  mode.rs  semantic.rs  semantic_presence.rs  synthesis.rs  test_home.rs  tests.rs  thresholds.rs
src/core/: ids.rs  mod.rs  path_safety.rs  project_layout.rs  provenance.rs  source_language.rs
src/overlay/: agent_notes.rs  commentary.rs  mod.rs  types.rs
src/pipeline/: compact.rs  context_metrics.rs  diagnostics.rs  maintenance.rs  mod.rs  structural.rs  synthesis.rs  watch.rs  writer.rs
src/registry/: install_records.rs  io.rs  mod.rs  project_meta.rs  tests.rs
src/store/: AGENTS.md  mod.rs  sqlite.rs
src/structure/: discover.rs  drift.rs  graph.rs  identity.rs  mod.rs  parse.rs  prose.rs  rationale.rs
src/substrate/: classify.rs  discover.rs  hybrid.rs  incremental.rs  index.rs  mod.rs  rooted_search.rs
src/surface/: agent_doctrine.rs  card.rs  changed.rs  commentary_scope.rs  mod.rs  status_snapshot.rs  task_route.rs
src/tui/: actions.rs  app.rs  dashboard.rs  dashboard_tabs.rs  embedding_build_run.rs  explain_run.rs  live_dashboard.rs  materializer.rs  mcp_status.rs  mod.rs  probe.rs  projects.rs  setup_flow.rs  tests.rs  theme.rs  watcher.rs
src/util/: atomic_write.rs  file_lock.rs  mod.rs  test_paths.rs
tests/: android_discovery.rs  flutter_discovery.rs  multi_root_discovery.rs  mutation_soak.rs  watch_cli.rs
tests/mutation_soak/: daemon_cleanup.rs  links_accept.rs  support.rs  watch_active.rs  writer_lock.rs
(+1086 files in other folders)
