[workspace]
resolver = "2"
members = ["."]

[package]
name = "synrepo"
version = "0.0.1"
edition = "2021"
description = "A context compiler for AI coding agents"
license = "MIT"
repository = "https://github.com/whit3rabbit/synrepo"

[[bin]]
name = "synrepo"
path = "src/bin/cli.rs"

[lib]
name = "synrepo"
path = "src/lib.rs"

[dependencies]
# --- Substrate ---
# syntext is the deterministic lexical retrieval layer. Verify publication
# status on crates.io; if not published, switch to a git dependency pinned to
# a specific commit hash (never a branch).
syntext = "1.1.0"

# --- Tree-sitter via Rust crates (phase 1) ---
# Per-language crates each ship a pre-generated C grammar and expose
# LOCALS_QUERY, HIGHLIGHTS_QUERY, INJECTIONS_QUERY as &'static str constants.
# We read those directly and add synrepo-specific extras on top.
tree-sitter = "0.26.8"
tree-sitter-go = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-ruby = "0.23.1"
tree-sitter-swift = "0.7.2"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-dart = "0.2.0"

# --- Storage ---
# sqlite is the single source of truth for the graph and overlay stores.
# No in-memory graph mirror in v1; add petgraph only if measured latency
# on a specific query class demands it.
rusqlite = { version = "0.39", features = ["bundled"] }

# --- Filesystem and walking ---
walkdir = "2"
ignore = "0.4"              # respects .gitignore / .git/info/exclude
notify = "8"                # cross-platform file watcher for phase 2+
notify-debouncer-full = "0.7"
fs2 = "0.4"                 # cross-platform advisory file locking (flock / LockFileEx) for the writer lock
interprocess = "2"          # local_socket: Unix socket on Unix, named pipe on Windows. Blocking API only.

# --- Git integration ---
gix = { version = "0.83", default-features = false, features = ["sha1", "max-performance-safe", "revision", "blob-diff"] }

# --- Hashing and encoding ---
blake3 = "1"                # fast content hashing for file/symbol identity
hex = "0.4"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
toml_edit = "0.25" # structural TOML editing that preserves comments/formatting (used by `synrepo setup` for .codex/config.toml)
globset = "0.4"
schemars = "1"              # JSON Schema derives for MCP tool param structs

# --- Error handling and logging ---
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- CLI ---
agent-config = "0.1"
clap = { version = "4", features = ["derive"] }

# --- TUI (runtime dashboard) ---
# Pure-Rust terminal UI stack used by the interactive dashboard and setup/repair wizards.
# Crossterm provides cross-platform terminal control (raw mode, alt screen, events);
# ratatui is the widget/layout library built on top of it.
ratatui = "0.30"
crossterm = "0.29"

# --- MCP server (used by `synrepo mcp` subcommand) ---
rmcp = { version = "1.6.0", features = ["transport-io"] }
tokio = { version = "1", features = ["full"] }

# --- Concurrency ---
arc-swap = "1"              # for atomic snapshot publishing, matches syntext's model
parking_lot = "0.12"
crossbeam-channel = "0.5"

# --- Time ---
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }

# --- HTTP client (commentary generation) ---
# `rustls-tls` keeps us off OpenSSL to avoid portability and binary-size pain.
# `blocking` is the sync façade; commentary generation runs on the card
# compiler's thread and is not async in v1.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }

# --- Optional feature deps ---
# Minimal blocking HTTP server for the feature-gated Prometheus metrics endpoint.
tiny_http = { version = "0.12", optional = true }

# ONNX runtime for embedding-based semantic triage. Only compiled
# when the `semantic-triage` feature is enabled.
ort = { version = "2.0.0-rc.12", optional = true, features = ["ndarray"] }
tokenizers = { version = "0.23.1", optional = true }
ndarray = { version = "0.17.2", optional = true }

[target.'cfg(unix)'.dependencies]
# Needed for O_CLOEXEC on the writer lock file open so child processes do not
# inherit the advisory lock. Already a transitive dep.
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# Minimal Win32 surface for `is_process_alive` on Windows. Version matches the
# already-transitive 0.61.x pulled in by fs2, interprocess, and gix.
windows-sys = { version = "0.61", features = ["Win32_System_Threading", "Win32_Foundation"] }

[features]
default = []
metrics-http = ["dep:tiny_http"]
semantic-triage = ["dep:ort", "dep:tokenizers", "dep:ndarray"]

[dev-dependencies]
tempfile = "3"
proptest = "1"              # for the token-aligned coverage invariant tests
insta = "1"                 # snapshot testing for card output
criterion = "0.8"           # benchmarks

[profile.release]
lto = "thin"
codegen-units = 1

[package.metadata.deb]
name = "synrepo"
maintainer = "synrepo contributors"
copyright = "2026, synrepo contributors"
license-file = ["LICENSE", "4"]
extended-description = "A context compiler for AI coding agents."
section = "utils"
priority = "optional"
assets = [
    ["target/release/synrepo", "usr/bin/synrepo", "755"],
]
