[package]
name = "synrepo-mcp"
version = "0.0.1"
edition = "2021"
description = "MCP server that exposes synrepo graph intelligence to coding agents"
license = "MIT"

[[bin]]
name = "synrepo-mcp"
path = "src/main.rs"

[dependencies]
# Library crate — provides the graph store, card compiler, and substrate search.
synrepo = { path = "../.." }

# MCP server runtime (modelcontextprotocol/rust-sdk on crates.io).
# Default features include server, macros, and stdio transport.
rmcp = { version = "1.4.0", features = ["transport-io"] }

# Async runtime for the MCP server.
tokio = { version = "1", features = ["full"] }

# Serialization for tool request/response types.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling.
anyhow = "1"
